--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 <footer class="footer">
   <div class="footer-content">
     <div class="footer-brand">D<span class="accent">.</span>M<span class="accent">.</span>S</div>
-    <p class="footer-tagline" data-editable="footer_text">Crafted with ❤️ by Dinusha Madhushan Somarathna</p>
+    <p class="footer-tagline" data-editable="footer_text">Create  ❤️ by G.M. NISAL MUHANDIRAM</p>
     <div class="footer-social">
       <a href="mailto:dinushamadhushan017@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
       <a href="tel:0782363699" class="social-icon"><i class="fas fa-phone"></i></a>
@@ -463,3 +463,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
