--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
       <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
       <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
     </div>
-    <p class="footer-copy">© 2026 P.G Dinusha Madhushan Somarathna. All Rights Reserved.</p>
+    <p class="footer-copy">© 2026 G.M NISAL MUHANDIRAM. All Rights Reserved.</p>
   </div>
 </footer>
 
@@ -463,4 +463,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
