--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- ===== LOADING SCREEN ===== -->
 <div id="loader">
   <div class="loader-content">
-    <div class="loader-logo">D.M.S</div>
+    <div class="loader-logo">Dinusha Madhushan</div>
     <div class="loader-bar"><div class="loader-fill"></div></div>
     <p class="loader-text">Loading Portfolio...</p>
   </div>
@@ -463,5 +463,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
