--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="photo-ring ring-1"></div>
         <div class="photo-ring ring-2"></div>
         <div class="photo-ring ring-3"></div>
-        <img src="photo.jpg" alt="D.M.S" class="hero-photo" id="heroPhoto"/>
+        <img src="photo.jpg" alt="Dinusha Madhushan" class="hero-photo" id="heroPhoto"/>
         <div class="photo-badge"><span>🎓 USJ</span></div>
       </div>
     </div>
@@ -463,6 +463,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
